Fixed text alignment of popout boxes

--- a/game/static/game/css/game_screen.css
+++ b/game/static/game/css/game_screen.css
@@ -137,23 +137,26 @@ table th {
     height: 30px;
     margin-right:8px;
     margin-left: 8px;
+    float: left;
 }
 
-.navigation_button img + span {
-    line-height: 30px;
-}
-
-.navigation_button img + span {
+.navigation_button span {
     line-height: 30px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.navigation_button img + span {
+    line-height: 30px;
+    margin-left: 2px;
+    margin-right: 15px;
+    float: left;
 }
 
 .navigation_button img,
 .navigation_button span {
     vertical-align: middle;
     color: black;
-    float: left;
 }
 
 .navigation_button:hover,
